--- a/CSS_files/homepage-grid.css
+++ b/CSS_files/homepage-grid.css
@@ -1,9 +1,12 @@
-.homepage-grid{
-    height: 1500px;
+.intro-box{
     width: 1fr;
-    border: 5px solid;
-    padding: 0px;
-    border: none; margin: 0;
+    height: 100px;
+    padding: 10px;
+    font-size: 35px;
+    font-family: Poppins, Arial;
+    border: 1px solid goldenrod;
+    background-color: rgb(13, 8, 165);
+    color: gold;
 }
 
 .services{
