--- a/CSS_files/homepage-header.css
+++ b/CSS_files/homepage-header.css
@@ -75,11 +75,10 @@ a:link, a:visited, a:hover, a:active {
     padding-left: 4px; padding-right: 4px;
 }
 
-.footer-box{
+footer{
+    bottom: 0; right: 0; left: 0;
     vertical-align: bottom;
     max-width: 1fr;
     height: 100px;
     background-color: goldenrod;
-    position: fixed;  right: 0;bottom:0;left:0;
-    justify-content: center;
 }
