--- a/CSS_files/homepage-grid.css
+++ b/CSS_files/homepage-grid.css
@@ -1,4 +1,4 @@
-.intro-box{
+.intro-box {
     margin: 15px;
     width: 1fr;
     height: 400px;
@@ -9,7 +9,7 @@
     background-color: rgb(13, 8, 165);
 }
 
-.intro-text{
+.intro-text {
     margin: 15px;
     text-align: center;
     font-size: 35px;
@@ -17,20 +17,20 @@
     color: gold;
 }
 
-.intro-grid{
+.intro-grid {
     display: grid;
     display: grid;
     grid-template-columns: 700px 600px;
 }
 
-.subtext{
+.subtext {
     width: 1fr; max-width: 650px;
     display: grid;
     grid-template-rows: auto;
     margin-left: 25px;
 }
 
-.intro-subtext-a, .intro-subtext-b{
+.intro-subtext-a, .intro-subtext-b {
     margin-left: 10px; margin-right: 10px;
     margin-top: none; margin-bottom: none;
     height: 130px;
@@ -38,17 +38,17 @@
     color: white;
 }
 
-.intro-image{
-    margin-left: 50px; margin-right: 50px;
+.intro-image {
+    margin-left: 25px; margin-right: 25px;
 }
 
-.card{
+.card {
     width: 1fr; max-width: 650px;
     height: 1fr; max-height: 300px;
     object-fit: contain;
 }
 
-.services-menu{
+.services-menu {
     width: 1fr;
     height: 40px;
     margin: none; margin-bottom: 30px;
@@ -60,7 +60,7 @@
     position: relative;
 }
 
-.service-text{
+.service-text {
     font-size: 25px;
     width: 1fr;
     margin: 0px;
@@ -74,7 +74,7 @@
     overflow: hidden;
 }   
 
-.service-text:hover{
+.service-text:hover {
     height: 40px;
     padding-left: 10px; padding-right: 10px;
     border: 1px solid goldenrod;
@@ -88,12 +88,60 @@
     border: 2px solid none;
     border-radius: 25px;
     margin-bottom: 100px;
-    vertical-align: middle; align-items: center;
-    display: grid; grid-template-columns: 650px 1fr;
+    vertical-align: middle;
+    display: grid; grid-template-columns: 0px 1fr;
 }
 
-.homepage-grid img{
-    height: 600px; width: 1fr;
-    object-fit: contain;
-    border-bottom-left-radius: 25px; border-top-left-radius: 25px;
+.homepage-grid img {
+    height: 600px; width: 1230px;
+    border-radius: 15px;
 }
+
+.menu-title {
+    height: 600px;
+    margin: 0; padding: 0;
+    border: 1px solid rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: azure;
+    grid-template-columns: 200px;
+    justify-content: space-between;
+    border-bottom-right-radius: 25px; border-top-right-radius: 25px;
+    border-bottom-left-radius: 15px; border-top-left-radius: 15px;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.menu-title:hover {
+    opacity: 1;
+}
+
+.menu-name {
+    max-height: 400px; height: 1fr;
+    font-family: Roboto, arial; font-weight: 600;
+    font-size: 60px; margin: 15px; padding: 10px;
+}
+
+.menu-explain {
+    max-height: 400px; height: 1fr;
+    font-family: poppins, arial; font-weight: 400;
+    font-size: 30px; margin: 15px;
+}
+
+.menu-actions {
+    max-height: 400px; height: 1fr;
+    margin: 40px;
+    justify-content: space-between;
+
+}
+
+.homepage-grid button {
+    font-family: Roboto, arial; font-weight: 600;
+    font-size: 25px;
+    margin-left: 30px; margin-right: 30px;
+    height: 60px; width: 200px;
+    border: 1px solid gold;
+    border-radius: 5px;
+    background-color: gold;
+    cursor: pointer;
+}
+
